[package]
name = "aoc2020"
version = "0.1.0"
authors = ["Timo Freiberg <timo.freiberg@novatec-gmbh.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.8.2"
eyre = "0.6.3"
itertools = "0.9.0"
log = "0.4.11"
